# real_estate_analysis

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logging_config.yaml  pyproject.toml  start.sh
app/: main.py
app/core/: __init__.py  enums.py  i18n.py  logger_config.py  metrics.py  pagination.py  routers.py  schemas.py  settings.py  sla_transform_decorator.py  type_vars.py
app/core/exceptions/: error_codes.py  exceptions.py  handlers.py  register.py  schemas.py
app/core/middleware/: i18n.py  metrics.py
app/core/tasks/: fetch_data_from_krisha.py  predict_price.py  startup.py
app/domain/analise/: service.py
app/domain/parser/: service.py
app/infrastructure/: krisha_analitic.py
app/infrastructure/adapters/: redis.py
app/infrastructure/db/: sessions.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 07136219f635_upd_update_data.py  35b30bca2347_add_added_model.py  5c9215eb06e1_upd_update_model.py  6855daa76f33_addd_added_model.py  91f45889cfe6_add_added_model.py  (+4 more)
app/infrastructure/db/models/: __init__.py  base.py  building_analis.py  building_forecast.py  currency_rate.py  data.py  inflation.py  nds.py  predict_data.py  trading_info.py
app/infrastructure/db/repositories/: abstract.py  building_analisation.py  building_forecast.py  currency_rate.py  data.py  inflation.py  nds.py  predict_data.py  sqlalchemy_base.py
app/infrastructure/parser_v2/: driver_factory.py  start_parser.py
app/presentation/api/: parser.py
app/tests/: conftest.py
app/tests/unit/: service_test.py
